2002-12-11  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (QUEUED_OP_DUMMY_TYPE):
	Rename constant to QUEUED_OP_NOP_TYPE.
	(indexColumn, dumpQueue, outputPartialLine):  If queued op is
	QUEUED_OP_NOP_TYPE, there is no posn, so skip it.
	(forcePrettyOutput):  Clear queueSize.  This avoids a future
	ArrayIndexOutOfBoundsException.

2002-07-21  Per Bothner  <per@bothner.com>

	* SourceMessages.java (getFile, getLine, getColumn, setFile, setLine,
	setLine, error):  New messages.
	(current_filename, current_line, current_column):  New fields.

2002-06-26  Per Bothner  <per@bothner.com>

	* LineBufferedReader.java (skip):  More robust newline handling.
	The old implementation got line numbers off.
	(read(char[],int,int)):  Likewise.

2002-06-18  Per Bothner  <per@bothner.com>

	* LineBufferedReader.java (reserve):  Fix logic error.
	(countLines):  Change 2nd parameter from length to limit.

2002-06-02  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (outputLine):  Copy prefix to new buffer, not
	original one.  Fixes bug reported by Mirko.Luedde@Computer.Org.

2002-02-13  Per Bothner  <per@bothner.com>

	* Char.java (toString):  Print char in Java format, e.g. "'\t'".

	* Char.java:  No longer implements Printable.
	Thus no gnu.text no longer depends on gnu.mapping.
	(print):  Remove method.

2002-01-29  Per Bothner  <per@bothner.com>

	* SyntaxException.java (header):  New field.
	(getHeader, setHeader):  New methods.
	(printAll):  First print header, if non-null.

2002-01-23  Per Bothner  <per@bothner.com>

	* Lexer.java (interactive):  New field.
	(isInteractive, setInteractive):  New methods.

	* Lexer.java (eofError):  New method.

2001-12-24  Per Bothner  <per@bothner.com>

	* IntegerFormat.java:  Remove dependencies on gnu.math.
	Move them to new class gnu.kawa.functions.IntegerFormat.
	(base, minWidth, padChar, commaChar, commaInterval, flags): Now public.
	(plainDecimalFormat, getInstance):  Move to new class.
	(asInteger):  Remove method.